--- a/EDA_DA.ipynb
+++ b/EDA_DA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNasLNrBkSWdppUAJCiIo8/",
+      "authorship_tag": "ABX9TyNU9Sm+6GszX4oPy8ut5BEy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "J7qawc7Ms_KG"
       },
@@ -39,6 +39,15 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Reading the dataset"
+      ],
+      "metadata": {
+        "id": "x7ww-KYd_cLv"
+      }
     },
     {
       "cell_type": "code",
@@ -55,7 +64,7 @@
         "id": "4w6Te14etFTe",
         "outputId": "fcff23bd-0460-45fe-ee1a-6aad7019ac4f"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -436,7 +445,7 @@
         "id": "Hi85dOC_tTeK",
         "outputId": "6b63ad10-5e73-48e1-f824-cb6c84f02839"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -476,7 +485,7 @@
         "id": "2uRYVDc122G8",
         "outputId": "d6793015-d7bd-4615-de3b-a3b0b63a5233"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -804,7 +813,7 @@
         "id": "aJWr97Wf3CUN",
         "outputId": "3cd2398e-c997-40ab-f4fb-b7bbf1b5cbd3"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -881,7 +890,7 @@
         "id": "64LgllO43Rf0",
         "outputId": "871b63b8-9614-4b27-bdc5-659c7c67e2a7"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -953,7 +962,7 @@
         "id": "naUN0rT43bNq",
         "outputId": "3924d1e6-cb7e-48c9-d8ea-6e41be4d475f"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1118,7 +1127,7 @@
         "id": "I1bAqFgc3fbU",
         "outputId": "2781bc94-77f8-4736-fa8d-03e0e1eabb90"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1163,7 +1172,7 @@
         "id": "lyLoloo-3nM4",
         "outputId": "8d31064d-8a4b-432b-c18f-84bbeb21206f"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
