Trial for Phase 2

--- a/22BDS0027.ipynb
+++ b/22BDS0027.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN12j+zr6lTtip4v4fcCThp",
+      "authorship_tag": "ABX9TyMIwuRD/Rva5KwcMtykrtXR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "J7qawc7Ms_KG"
       },
@@ -85,9 +85,9 @@
           "height": 206
         },
         "id": "4w6Te14etFTe",
-        "outputId": "14cd3010-d327-4e9f-d97e-8e5a455da630"
+        "outputId": "e6f3dfe6-fae9-4b07-c08c-3ed8b2ceb6cd"
       },
-      "execution_count": 6,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -109,7 +109,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-364ffa59-037d-482a-a7fb-d53beb867be4\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-3aef3d4b-517a-432b-8202-a67aca287881\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -236,7 +236,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-364ffa59-037d-482a-a7fb-d53beb867be4')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3aef3d4b-517a-432b-8202-a67aca287881')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -288,12 +288,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-364ffa59-037d-482a-a7fb-d53beb867be4 button.colab-df-convert');\n",
+              "        document.querySelector('#df-3aef3d4b-517a-432b-8202-a67aca287881 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-364ffa59-037d-482a-a7fb-d53beb867be4');\n",
+              "        const element = document.querySelector('#df-3aef3d4b-517a-432b-8202-a67aca287881');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -313,8 +313,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-30ebb0e5-5750-4d55-8159-af56a0c4edfc\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-30ebb0e5-5750-4d55-8159-af56a0c4edfc')\"\n",
+              "    <div id=\"df-30b15f35-c57c-4e8f-99ff-388d08431f58\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-30b15f35-c57c-4e8f-99ff-388d08431f58')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -433,7 +433,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-30ebb0e5-5750-4d55-8159-af56a0c4edfc button');\n",
+              "            document.querySelector('#df-30b15f35-c57c-4e8f-99ff-388d08431f58 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -450,7 +450,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 2
         }
       ]
     },
@@ -472,12 +472,12 @@
       ],
       "metadata": {
         "id": "Hi85dOC_tTeK",
-        "outputId": "fde3a63d-a58b-4564-a6a9-2465b76c0939",
+        "outputId": "9bfb4866-1d1f-4238-c4ed-184f6fb224e0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -506,12 +506,12 @@
       ],
       "metadata": {
         "id": "xLfULtMVEz6E",
-        "outputId": "2c3684b1-eb07-4999-9a8f-695cfd94d432",
+        "outputId": "e4fee368-82c0-48e6-a4e7-6f725b2e4c62",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -550,13 +550,13 @@
       ],
       "metadata": {
         "id": "XCJsQFQgFO8v",
-        "outputId": "74d4f15b-4332-4178-bb82-545786db74ee",
+        "outputId": "1e899053-f9d3-4610-f2ad-6132aec661fc",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 338
+          "height": 300
         }
       },
-      "execution_count": 16,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -584,7 +584,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-7e071b3f-f3fa-4847-a543-8604df9545e6\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-9e285812-daad-4a2b-95db-6317e17cf524\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -744,7 +744,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7e071b3f-f3fa-4847-a543-8604df9545e6')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9e285812-daad-4a2b-95db-6317e17cf524')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -796,12 +796,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-7e071b3f-f3fa-4847-a543-8604df9545e6 button.colab-df-convert');\n",
+              "        document.querySelector('#df-9e285812-daad-4a2b-95db-6317e17cf524 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-7e071b3f-f3fa-4847-a543-8604df9545e6');\n",
+              "        const element = document.querySelector('#df-9e285812-daad-4a2b-95db-6317e17cf524');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -821,8 +821,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-469ea58f-31f9-48b7-9883-835ae232cdb1\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-469ea58f-31f9-48b7-9883-835ae232cdb1')\"\n",
+              "    <div id=\"df-3e7f4893-4cf4-4e2e-acaa-b1477fe70a59\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3e7f4893-4cf4-4e2e-acaa-b1477fe70a59')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -941,7 +941,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-469ea58f-31f9-48b7-9883-835ae232cdb1 button');\n",
+              "            document.querySelector('#df-3e7f4893-4cf4-4e2e-acaa-b1477fe70a59 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -957,7 +957,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 5
         }
       ]
     },
@@ -969,13 +969,13 @@
       ],
       "metadata": {
         "id": "HjYk6zj5FGkL",
-        "outputId": "914decaa-ef05-4f08-9bd1-edb29efad4ec",
+        "outputId": "46660153-94f7-4e75-a648-c6c25f276c41",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 175
         }
       },
-      "execution_count": 17,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -989,7 +989,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-440716d7-b67c-41ee-b277-81ff4ead2be7\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-fca21eee-9f43-46ea-aa08-9af45d757e90\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1039,7 +1039,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-440716d7-b67c-41ee-b277-81ff4ead2be7')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fca21eee-9f43-46ea-aa08-9af45d757e90')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1091,12 +1091,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-440716d7-b67c-41ee-b277-81ff4ead2be7 button.colab-df-convert');\n",
+              "        document.querySelector('#df-fca21eee-9f43-46ea-aa08-9af45d757e90 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-440716d7-b67c-41ee-b277-81ff4ead2be7');\n",
+              "        const element = document.querySelector('#df-fca21eee-9f43-46ea-aa08-9af45d757e90');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1116,8 +1116,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-b8f16312-5f4c-4de2-9dff-fe3ccb8d3999\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b8f16312-5f4c-4de2-9dff-fe3ccb8d3999')\"\n",
+              "    <div id=\"df-ba177579-b3f8-4fc2-abc6-b94a61174440\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ba177579-b3f8-4fc2-abc6-b94a61174440')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1236,7 +1236,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-b8f16312-5f4c-4de2-9dff-fe3ccb8d3999 button');\n",
+              "            document.querySelector('#df-ba177579-b3f8-4fc2-abc6-b94a61174440 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1252,7 +1252,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 6
         }
       ]
     },
@@ -1273,12 +1273,12 @@
       ],
       "metadata": {
         "id": "a_Mn20KkFxbq",
-        "outputId": "03f5c5c4-3a8c-4b52-c92f-4b3ff8a1a3d2",
+        "outputId": "3c6695d0-2465-4fa6-8803-307fd3c97ef6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -1323,12 +1323,12 @@
       ],
       "metadata": {
         "id": "hNlCtTEmGA32",
-        "outputId": "f2a411f1-3694-499a-b418-3b1940bda193",
+        "outputId": "83cf1a94-7e46-4fba-d111-df6dae635597",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -1365,12 +1365,12 @@
       ],
       "metadata": {
         "id": "qgRQmwouGvqZ",
-        "outputId": "741b9bab-37fd-417f-922e-edb026d52c0b",
+        "outputId": "3d189b0a-ca0b-4232-9c09-ddfd876d2ce0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -1413,12 +1413,12 @@
       ],
       "metadata": {
         "id": "FMdO3yoUG6A-",
-        "outputId": "897aff15-311e-4f56-b105-f2a47a8bfb1c",
+        "outputId": "7b85ce50-0b03-4ec6-d551-ea72c85c9349",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -1444,12 +1444,12 @@
       ],
       "metadata": {
         "id": "MVLRHarvH8Ls",
-        "outputId": "5a9c89da-ffba-44a0-cc58-bb4686f31b8f",
+        "outputId": "6cbfbdad-d2eb-4774-9e74-2d0a49a56f31",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -1510,13 +1510,13 @@
       ],
       "metadata": {
         "id": "muW7GK-UIGXr",
-        "outputId": "fd1a70fe-3ac3-4f3e-f309-0432221e3b5f",
+        "outputId": "fcf02bbf-664e-4fb0-e2ff-9b402d3c6f34",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         }
       },
-      "execution_count": 28,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1818,13 +1818,13 @@
       ],
       "metadata": {
         "id": "5oU8eiqnIuyN",
-        "outputId": "60fd606a-e0bc-4ec4-d523-57b9142c0c7f",
+        "outputId": "bd74ea75-fbd0-4199-8f4b-f530412cd2df",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 564
         }
       },
-      "execution_count": 30,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1849,13 +1849,13 @@
       ],
       "metadata": {
         "id": "tDDVabb5LjlX",
-        "outputId": "6ca794bd-3172-48d9-c54a-1f6c9f850b2d",
+        "outputId": "d6cfca1b-4804-485a-eb26-019766b21a40",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 564
         }
       },
-      "execution_count": 31,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1901,13 +1901,13 @@
       ],
       "metadata": {
         "id": "NQL0Ys_6K46Y",
-        "outputId": "7a81912b-b60e-47c0-f351-8bda985ec291",
+        "outputId": "42293892-c4a8-438d-856b-95ae8e37c842",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 897
+          "height": 1000
         }
       },
-      "execution_count": 32,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1933,13 +1933,13 @@
       ],
       "metadata": {
         "id": "dJdrn_TpLy5T",
-        "outputId": "c3a27645-62b3-44ac-bba6-7cfc2208aae0",
+        "outputId": "f4db2513-7809-4b17-c8c2-5f38ec82cd22",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 769
         }
       },
-      "execution_count": 33,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1965,12 +1965,21 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Phase 2"
+      ],
+      "metadata": {
+        "id": "MIWBudsbbtoG"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
         "id": "j0eXl1uxLzi1"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     }
   ]
